--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
         <h1 class="logo">DBD</h1>
       </div>
     </nav>
+
+    <section class="showcase-section" id="showcase">
+      <h1 class="showcase-title">Eat Right Food</h1>
+      <p class="showcase-text">Eat Healthy food, it is good for your health</p>
+      <a href="#food-menu" class="btn">Menu</a>
+    </section>
   </body>
 </html>
