--- a/index.html
+++ b/index.html
@@ -35,9 +35,164 @@
     </nav>
 
     <section class="showcase-section" id="showcase">
-      <h1 class="showcase-title">Eat Right Food</h1>
-      <p class="showcase-text">Eat Healthy food, it is good for your health</p>
-      <a href="#food-menu" class="btn">Menu</a>
+      <div class="showcase-container">
+        <h1 class="showcase-title">Eat Right Food</h1>
+        <p class="showcase-text">
+          Eat Healthy food, it is good for your health.
+        </p>
+        <a href="#food-menu" class="btn btn-primary">Menu</a>
+      </div>
+    </section>
+
+    <section class="about-us" id="about-us">
+      <div class="about-wrapper container">
+        <div class="about-text">
+          <p class="small">About Us</p>
+          <h2>We've been Making Healthy Food for Last 10 years</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quod
+            aperiam debitis quae autem reiciendis, laudantium exercitationem
+            ipsam sed. Odit, harum minima. Obcaecati ab molestiae voluptates
+            enim, dolorem, minus aliquam explicabo perferendis quo dolorum quae
+            animi eveniet dicta neque placeat!
+          </p>
+        </div>
+        <div class="about-img">
+          <img src="./img/about-photo.jpg" alt="about image" />
+        </div>
+      </div>
+    </section>
+
+    <section id="food" class="food">
+      <h2>Types of food</h2>
+      <div class="food-container container">
+        <div class="food-type fruit">
+          <div class="img-container">
+            <img src="./img/food1.jpg" alt="food" />
+            <div class="img-content">
+              <h3>Fruit</h3>
+              <a
+                href="https://en.wikipedia.org/wiki/Fruit"
+                class="btn btn-primary"
+                target="_blank"
+                >Learn More</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="food-type vegetable">
+          <div class="img-container">
+            <img src="./img/food2.jpg" alt="vegetable" />
+            <div class="img-content">
+              <h3>Vegetable</h3>
+              <a
+                href="https://en.wikipedia.org/wiki/Vegetable"
+                class="btn btn-primary"
+                target="_blank"
+                >Learn More</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="food-type grain">
+          <div class="img-container">
+            <img src="./img/food3.jpg" alt="grain" />
+            <div class="img-content">
+              <h3>Grain</h3>
+              <a
+                href="https://en.wikipedia.org/wiki/Grain"
+                class="btn btn-primary"
+                target="_blank"
+                >Learn More</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="food-menu" id="food-menu">
+      <h2 class="food-menu-heading">Food Menu</h2>
+      <div class="food-menu-container container">
+        <div class="food-menu-item">
+          <div class="food-image">
+            <img src="./img/food-menu1.jpg" alt="food-menu-1" />
+          </div>
+          <div class="food-description">
+            <h2 class="food-title">Food Menu Item-1</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis,
+              accusamus.
+            </p>
+            <p class="food-price">Price: &#8360; 250</p>
+          </div>
+        </div>
+        <div class="food-menu-item">
+          <div class="food-image">
+            <img src="./img/food-menu2.jpg" alt="food-menu-2" />
+          </div>
+          <div class="food-description">
+            <h2 class="food-title">Food Menu Item-2</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis,
+              accusamus.
+            </p>
+            <p class="food-price">Price: &#8360; 250</p>
+          </div>
+        </div>
+        <div class="food-menu-item">
+          <div class="food-image">
+            <img src="./img/food-menu3.jpg" alt="food-menu-3" />
+          </div>
+          <div class="food-description">
+            <h2 class="food-title">Food Menu Item-3</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis,
+              accusamus.
+            </p>
+            <p class="food-price">Price: &#8360; 250</p>
+          </div>
+        </div>
+        <div class="food-menu-item">
+          <div class="food-image">
+            <img src="./img/food-menu4.jpg" alt="food-menu-4" />
+          </div>
+          <div class="food-description">
+            <h2 class="food-title">Food Menu Item-4</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis,
+              accusamus.
+            </p>
+            <p class="food-price">Price: &#8360; 250</p>
+          </div>
+        </div>
+        <div class="food-menu-item">
+          <div class="food-image">
+            <img src="./img/food-menu5.jpg" alt="food-menu-5" />
+          </div>
+          <div class="food-description">
+            <h2 class="food-title">Food Menu Item-5</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis,
+              accusamus.
+            </p>
+            <p class="food-price">Price: &#8360; 250</p>
+          </div>
+        </div>
+        <div class="food-menu-item">
+          <div class="food-image">
+            <img src="./img/food-menu6.jpg" alt="food-menu-6" />
+          </div>
+          <div class="food-description">
+            <h2 class="food-title">Food Menu Item-6</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis,
+              accusamus.
+            </p>
+            <p class="food-price">Price: &#8360; 250</p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
