--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <span class="line line3"></span>
         </div>
         <ul class="menu-items">
-          <li class="nav-item"><a href="#home">Home</a></li>
-          <li class="nav-item"><a href="#about">About</a></li>
-          <li class="nav-item"><a href="#category">Category</a></li>
-          <li class="nav-item"><a href="#menu">Menu</a></li>
-          <li class="nav-item"><a href="#testimonial">Testimonial</a></li>
+          <li class="nav-item"><a href="#showcase">Home</a></li>
+          <li class="nav-item"><a href="#about-us">About</a></li>
+          <li class="nav-item"><a href="#food">Category</a></li>
+          <li class="nav-item"><a href="#food-menu">Menu</a></li>
+          <li class="nav-item"><a href="#testimonials">Testimonial</a></li>
           <li class="nav-item"><a href="#contact">Contact</a></li>
         </ul>
         <h1 class="logo">DBD</h1>
@@ -194,5 +194,135 @@
         </div>
       </div>
     </section>
+
+    <section class="testimonials" id="testimonials">
+      <h2 class="testimonial-title">What Our Customers Say</h2>
+      <div class="testimonial-container container">
+        <div class="testimonial-box">
+          <div class="star-rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </div>
+          <p class="testimonial-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae,
+            alias.
+          </p>
+          <div class="customer-detail">
+            <div class="customer-photo">
+              <img src="./img/male-photo1.jpg" alt="" />
+            </div>
+            <p class="customer-name">Jason</p>
+          </div>
+        </div>
+        <div class="testimonial-box">
+          <div class="star-rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </div>
+          <p class="testimonial-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae,
+            alias.
+          </p>
+          <div class="customer-detail">
+            <div class="customer-photo">
+              <img src="./img/male-photo2.jpg" alt="" />
+            </div>
+            <p class="customer-name">John</p>
+          </div>
+        </div>
+        <div class="testimonial-box">
+          <div class="star-rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </div>
+          <p class="testimonial-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae,
+            alias.
+          </p>
+          <div class="customer-detail">
+            <div class="customer-photo">
+              <img src="./img/male-photo3.jpg" alt="" />
+            </div>
+            <p class="customer-name">Jami</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <div class="contact-container container">
+        <div class="contact-img">
+          <img src="./img/restraunt-image.jpg" alt="background cover" />
+        </div>
+        <div class="contact-content">
+          <h2>Contact Us</h2>
+          <input
+            type="text"
+            class="name"
+            id="name"
+            placeholder="Name"
+            required
+          />
+          <input
+            type="email"
+            class="email"
+            id="email"
+            placeholder="Email"
+            required
+          />
+          <textarea
+            name="comment"
+            id="comment"
+            cols="30"
+            rows="10"
+            placeholder="Type Your Message Here"
+          ></textarea>
+          <a href="#" class="btn btn-primary">Submit</a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer" id="footer">
+      <h2>Restaurant Website &copy; all rights reserved.</h2>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        // Add smooth scrolling to all links
+        $("a").on("click", function (event) {
+          // Make sure this.hash has a value before overriding default behavior
+          if (this.hash !== "") {
+            // Prevent default anchor click behavior
+            event.preventDefault();
+
+            // Store hash
+            var hash = this.hash;
+
+            // Using jQuery's animate() method to add smooth page scroll
+            // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+            $("html, body").animate(
+              {
+                scrollTop: $(hash).offset().top,
+              },
+              1000,
+              function () {
+                // Add hash (#) to URL when done scrolling (default click behavior)
+                window.location.hash = hash;
+              }
+            );
+          } // End if
+        });
+      });
+    </script>
   </body>
 </html>
